--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "react": "^0.11.0"
+    "flux": "^2.0.1",
+    "react": "^0.13.2"
   },
   "devDependencies": {
-    "express": "~4.2.0",
+    "express": "~4.12.3",
     "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0",
+    "morgan": "~1.5.2",
+    "cookie-parser": "~1.3.4",
+    "body-parser": "~1.12.3",
+    "debug": "~2.1.3",
+    "jade": "~1.9.2",
     "statics": "~0.1.0",
-    "webpack": "^1.3.7",
-    "jsx-loader": "^0.11.0"
+    "webpack": "^1.8.9",
+    "jsx-loader": "^0.13.1"
   },
   "main": "./index.js",
   "scripts": {
