--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "webpack-react-express",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "flux": "^2.0.1",
-    "react": "^0.13.2"
+    "flux": "^2.1.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   },
   "devDependencies": {
-    "express": "~4.12.3",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.5.2",
-    "cookie-parser": "~1.3.4",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "body-parser": "~1.12.3",
+    "cookie-parser": "~1.3.4",
     "debug": "~2.1.3",
+    "express": "~4.12.3",
     "jade": "~1.9.2",
+    "morgan": "~1.5.2",
+    "serve-favicon": "^2.3.0",
     "statics": "~0.1.0",
-    "webpack": "^1.8.9",
-    "jsx-loader": "^0.13.1"
+    "webpack": "^1.12.13"
   },
   "main": "./index.js",
   "scripts": {
